arvan-paas-templates/client/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - resources:
            limits:
              cpu: 100m
              ephemeral-storage: 100M
              memory: 100M
            requests:
              cpu: 100m
              ephemeral-storage: 100M
              memory: 100M
          terminationMessagePath: /dev/termination-log
          name: client
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: "registry.gitlab.com/toofun-group/kaseb-web-client"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
