arvan-paas-templates/client/service.yml
kind: Service
apiVersion: v1
metadata:
  name: client-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: client
  type: ClusterIP
